@startuml

title "CenturyDb"

skinparam packageStyle rectangle
skinparam roundCorner 10

abstract class AbstractCentury #AA5;line:CC7; {
    -static $centName = "century-";
    -static $$centPattId = "[0-9a-f]+";
    #static $dbMulti = 100;
    #static $dbDir = __DIR__.'/Db/';
    #$_dbName;
    #$_century;

    +__construct(string $dbName)
    #isCenturyName(string $file) : bool
    #isEntryFileName(string $fileName) : bool
    #isCenturyExists(string $century) : bool
    #getCenturyId(int $century) : string
    #getCenturyValue() : int
    #getValueId(string $centuryId) : int
    #extractCenturyId(string $centuryName) : int
    #getFirstCenturyValue() : string
    #getFirstCentury(string $value, string $entry)
}

class CenturyCache #A5A;line:A5A; {
    +static setCacheFile(string $cacheName, $value) : void
    +static getCachePath(string $cacheName) : string
    +static isCacheFile(string $cacheName) : bool
    +static getCacheFile(string $cacheName) : string
}

class CenturyReadMethods #AEE;line:AEE; {
    #readCenturyDir(string $task) : int
    #getValueTask()
    #getCenturyEntries(string $century) : array
}

class CenturyCountMethods #AEE;line:AEE; {
    #countCenturiesValue() : int
    #countCenturies(int $value, string $entry) : int
    #countCentury(string $century) : int
    #calcTotal() : int
    +getTotal() : int
}
CenturyCache *-- CenturyCountMethods
AbstractCentury --* CenturyCountMethods
CenturyReadMethods *-- CenturyCountMethods

class CenturiesSelect #CC7;line:AA5; {
    #$_step;
    #$_selected = [];

    +__construct(string $dbName)
    #setStep(int $step) : void
    #calcStep(int $from) : int
    #getSelectedEntries(int $from) : array
    +getSelectedEntries(int $from, int $step) : array
}
AbstractCentury *-- CenturiesSelect
CenturyCache *-- CenturiesSelect

class CenturyNavigateMethods #AEE;line:AEE; {
    #setNextCentury() : bool
    #isNextCentury() : bool
    #setPreviousCentury() : bool
    #getPreviousId() : string
}
CenturiesSelect --* CenturyNavigateMethods

class CenturySelectMethods #AEE;line:AEE; {
    #calcCentury(int $from) : int
    #calcStartEntry(int $from) : int
    #selectInCentury(int $from, int $step) : array
    #setSelectedEntries(int $from) : void
}
CenturiesSelect --* CenturySelectMethods

@enduml
